Update utils.ts and Form component
- Update utils.ts:
   -  Remove function isAtSymbolPresent (used for gitHub username)
   - Add functions with regex validation for the full name and gitHub username input values
   - Add functions validateFormInputs and isErrorObjectEmpty (returns true if the form is valid), to be used in Form

- Update Form component:
   - Add ref and function openChooseFile to be able to open the input file pop up by pressing "Enter" or "Space Bar"
   - Add autoComplete attributes to "Full name" and "Email" fields
   - Styling with gitHub username error message container

--- a/src/app/components/Form/Form.module.css
+++ b/src/app/components/Form/Form.module.css
@@ -112,6 +112,15 @@ CSS Module for Form component
 /*input info or error message container*/
 .inputMsgCont {
   height: 1.25rem; /*20px*/
+}
+
+/*gitHub username error message container*/
+.gitInputMsgCont {
+  height: 3.125rem; /*50px*/
+}
+
+.inputMsgCont,
+.gitInputMsgCont {
   margin-top: 0.8rem;
 }
 
