Update utils.ts and Form component, Add TS types, Ticket context provider , custom hook and component
- Update utils.ts
   - Add type guard function isFieldsTypeValid and converFile function
   - Rename validateFormIputs to validateFieldsRules

- Add TS types: UnvalidatedFieldsTypes (used by isFieldsTypeValid), ValidatedFieldsTypes (used by validateFieldsRules), Ticket and TicketContextType.

- Update InputMessage component styling

- Add TicketProvider and custom hook useTicket
- Update Form component with the new context and new functions from utils.ts
- Update layout.tsx with TicketProvider
- Add Ticket component and css module

--- a/src/app/components/InputMessage/InputMessage.module.css
+++ b/src/app/components/InputMessage/InputMessage.module.css
@@ -14,7 +14,6 @@ CSS Module for InputMessage component
 .msgCont {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
   gap: 0.5rem;
 }
 
@@ -27,6 +26,7 @@ CSS Module for InputMessage component
 /*message*/
 .text {
   font-size: 0.8rem;
+  flex: 1;
 }
 
 @media (min-width: 62.5rem /*1000px*/) {
