--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -9,3 +9,16 @@
   height: 2rem;
   margin: 2rem auto;
 }
+
+/*body container*/
+.bodyCont {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+/*main content container*/
+.mainCont {
+  flex: 1;
+  padding-bottom: 5rem;
+}
