--- a/src/app/components/Form/Form.module.css
+++ b/src/app/components/Form/Form.module.css
@@ -136,6 +136,7 @@ CSS Module for Form component
   border-bottom: 5px solid var(--orange-500);
   border-radius: 12px;
   padding: 1rem 0;
+  margin-top: 0.5rem;
 }
 
 .submitBtn:hover {
@@ -181,5 +182,10 @@ CSS Module for Form component
   /*Form text description*/
   .text {
     font-size: 1.2rem;
+  }
+
+  /*Form submit button*/
+  .submitBtn {
+    font-size: 1rem;
   }
 }
