Update styling, components accessibility and README file
- Updated the Form component so the paragraph is always announced, describing the form’s objective.
- Updated the Ticket component so the paragraph is always announced.
- Update REAME file with accessibility tests

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,7 @@ body {
   overflow-x: hidden;
   font-family: var(--font-inconsolata);
   color: var(--neutral-0);
+  background-color: var(--neutral-900);
   -webkit-font-smoothing: antialiased; /*smooths the edges of fonts on Chrome, Safari, Edge*/
   -moz-osx-font-smoothing: grayscale; /*smooths the edges of fonts Firefox on macOS*/
 }
